typewriter-test/tests/snapshots/graphql_tests__adjacent_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: Event

type EventClick {
  """ Discriminator: always \"click\" """
  t: String!
  cX: Int!
  cY: Int!
}

type EventKeyPress {
  """ Discriminator: always \"key_press\" """
  t: String!
  item0: String!
}

type EventResize {
  """ Discriminator: always \"resize\" """
  t: String!
}

union Event = EventClick | EventKeyPress | EventResize
