typewriter-test/tests/snapshots/graphql_tests__external_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.0. DO NOT EDIT.
# Source: Shape

"""
Geometric shape
"""
type ShapeCircle {
  radius: Float!
}

type ShapeRectangle {
  width: Float!
  height: Float!
}

type ShapePoint {
}

union Shape = ShapeCircle | ShapeRectangle | ShapePoint
