typewriter-test/tests/snapshots/graphql_tests__generic_struct_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: Pagination

"""
Paginated response wrapper
"""
type Pagination {
  items: [T!]!
  total: Int!
  page: Int!
}
