typewriter-test/tests/snapshots/graphql_tests__simple_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.0. DO NOT EDIT.
# Source: Role

enum Role {
  Admin
  User
  Guest
}
