typewriter-test/tests/snapshots/graphql_tests__simple_struct_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: UserProfile

scalar DateTime


"""
User profile information
"""
type UserProfile {
  """ Unique identifier """
  id: ID!
  email: String!
  age: Int
  role: UserRole!
  createdAt: DateTime!
}
