typewriter-test/tests/snapshots/graphql_tests__skipped_field_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.0. DO NOT EDIT.
# Source: User

type User {
  email: String!
}
