typewriter-test/tests/snapshots/graphql_tests__struct_with_collections_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: ApiResponse

scalar JSON


type ApiResponse {
  items: [Item!]!
  metadata: JSON!
  coordinates: JSON!
}
