typewriter-test/tests/snapshots/graphql_tests__tagged_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.0. DO NOT EDIT.
# Source: PaymentStatus

"""
Payment processing status
"""
type PaymentStatusPending {
  """ Discriminator: always \"pending\" """
  type: String!
}

type PaymentStatusCompleted {
  """ Discriminator: always \"completed\" """
  type: String!
  transaction_id: String!
}

type PaymentStatusFailed {
  """ Discriminator: always \"failed\" """
  type: String!
  reason: String!
  code: Int!
}

union PaymentStatus = PaymentStatusPending | PaymentStatusCompleted | PaymentStatusFailed
