typewriter-test/tests/snapshots/graphql_tests__tuple_variant_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: Message

"""
WebSocket message types
"""
"""
A text message
"""
type MessageText {
  item0: String!
}

type MessageBinary {
  item0: [Int!]!
}

type MessagePing {
}

union Message = MessageText | MessageBinary | MessagePing
