typewriter-test/tests/snapshots/graphql_tests__untagged_enum_snapshot.snap
---
source: typewriter-test/tests/graphql_tests.rs
expression: output
---
# Auto-generated by typewriter v0.4.1. DO NOT EDIT.
# Source: StringOrNumber

type StringOrNumberText {
  value: String!
}

type StringOrNumberNumber {
  value: Float!
}

union StringOrNumber = StringOrNumberText | StringOrNumberNumber
